starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__assignment.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nvalue = value + 1;"
---
Assignment {
    target: Identifier {
        name: "value",
        span: 0..5,
    },
    value: Spanned {
        node: Binary {
            op: Add,
            left: Spanned {
                node: ScopedName(
                    [
                        Identifier {
                            name: "value",
                            span: 8..13,
                        },
                    ],
                ),
                span: 8..14,
            },
            right: Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "1",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 16..17,
            },
        },
        span: 8..17,
    },
}
