starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__expression_statement.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nvalue + 1;"
---
Expression(
    Spanned {
        node: Binary {
            op: Add,
            left: Spanned {
                node: ScopedName(
                    [
                        Identifier {
                            name: "value",
                            span: 0..5,
                        },
                    ],
                ),
                span: 0..6,
            },
            right: Spanned {
                node: Literal(
                    Integer(
                        IntegerLiteral {
                            digits: "1",
                            radix: Decimal,
                        },
                    ),
                ),
                span: 8..9,
            },
        },
        span: 0..9,
    },
)
