starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__if_else.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nif (flag) { let a = 1; } else { value = value + 1; }\n"
---
If {
    branches: [
        (
            Spanned {
                node: Identifier(
                    Identifier {
                        name: "flag",
                        span: Some(
                            4..8,
                        ),
                    },
                ),
                span: 4..8,
            },
            Block {
                statements: [
                    VariableDeclaration {
                        mutable: false,
                        name: Identifier {
                            name: "a",
                            span: Some(
                                16..17,
                            ),
                        },
                        value: Spanned {
                            node: Literal(
                                Integer(
                                    1,
                                ),
                            ),
                            span: 20..21,
                        },
                    },
                ],
            },
        ),
    ],
    else_branch: Some(
        Block {
            statements: [
                Assignment {
                    target: Identifier {
                        name: "value",
                        span: Some(
                            32..37,
                        ),
                    },
                    value: Spanned {
                        node: Binary {
                            op: Add,
                            left: Spanned {
                                node: Identifier(
                                    Identifier {
                                        name: "value",
                                        span: Some(
                                            40..45,
                                        ),
                                    },
                                ),
                                span: 40..46,
                            },
                            right: Spanned {
                                node: Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 48..49,
                            },
                        },
                        span: 40..49,
                    },
                },
            ],
        },
    ),
}
