starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__let_binding.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nlet answer = 42;"
---
VariableDeclaration {
    public: false,
    mutable: false,
    pattern: Name(
        [
            Identifier {
                name: "answer",
                span: 4..10,
            },
        ],
    ),
    ty: None,
    value: Spanned {
        node: Literal(
            Integer(
                IntegerLiteral {
                    digits: "42",
                    radix: Decimal,
                },
            ),
        ),
        span: 13..15,
    },
    else_branch: None,
}
