starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__let_mut_binding.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nlet mut answer = 42;"
---
VariableDeclaration {
    public: false,
    mutable: true,
    name: Identifier {
        name: "answer",
        span: 8..14,
    },
    ty: None,
    value: Spanned {
        node: Literal(
            Integer(
                IntegerLiteral {
                    digits: "42",
                    radix: Decimal,
                },
            ),
        ),
        span: 17..19,
    },
}
