starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__let_pub_binding.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nlet pub answer = 42;"
---
VariableDeclaration {
    public: true,
    mutable: false,
    name: Identifier {
        name: "answer",
        span: 8..14,
    },
    ty: None,
    value: Spanned {
        node: Literal(
            Integer(
                IntegerLiteral {
                    digits: "42",
                    radix: Decimal,
                },
            ),
        ),
        span: 17..19,
    },
}
