starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__let_pub_mut_binding.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nlet pub mut answer = 42;"
---
VariableDeclaration {
    public: true,
    mutable: true,
    pattern: Name(
        [
            Identifier {
                name: "answer",
                span: 12..18,
            },
        ],
    ),
    ty: None,
    value: Spanned {
        node: Literal(
            Integer(
                IntegerLiteral {
                    digits: "42",
                    radix: Decimal,
                },
            ),
        ),
        span: 21..23,
    },
    else_branch: None,
}
