starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__return_with_value.snap
---
source: starstream-compiler/src/parser/statement.rs
description: "Code:\n\nreturn flag;"
---
Return(
    Some(
        Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "flag",
                        span: 7..11,
                    },
                ],
            ),
            span: 7..11,
        },
    ),
)
