starstream-compiler/src/parser/snapshots/starstream_compiler__parser__statement__tests__return_without_value.snap
---
source: starstream-compiler/src/parser/statement.rs
assertion_line: 200
description: "Code:\n\nreturn;"
---
Return(
    None,
)
